# Api-Assistant

./: .dockerignore  .env.example  .gitignore  AFFORDABLE_HOSTING_GUIDE.md  ARCHITECTURAL_REVIEW.md  CHANGELOG.md  CHANGELOG_V1.md  CLAUDE.md  CLI_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.backend  GOOGLE_CLOUD_RUN_DEPLOYMENT.md  LICENSE  MANUAL_TESTING_GUIDE.md  PLAN_USER_AUTHENTICATION.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_INTERNET_DEPLOYMENT.md  PRODUCTION_READINESS_REPORT.md  PROJECT_CONTEXT.md  PROJECT_ROADMAP.md  QUICKSTART.md  QUICK_CHECKLIST.md  QUICK_START.md  README.md  RELEASE_NOTES_V1.md  SETUP_CHAT.md  TESTING_GUIDE.md  YOUR_TODO_CHECKLIST.md  api_assistant_cli.py  check_langfuse.py  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  env.example.yaml  (+9 more)
data/: sessions.json
docker/: Dockerfile  docker-compose.yml
docs/: AGENT_ARCHITECTURE.md  DAY21_HYBRID_SEARCH.md  DAY23_QUERY_EXPANSION.md  DAY26_REST_API.md  IMPLEMENTATION_SUMMARY.md  KAGGLE_DATASET_IMPORT.md  LLM_PROVIDER_GUIDE.md  MONITORING_GUIDE.md  PHASE2_COMPLETION.md  PHASE3_REVIEW.md  PREREQUISITES.md  SEARCH_GUIDE.md  WEEK1_REVIEW.md
examples/: README.md  advanced_filtering_demo.py  api_demo.py  cross_encoder_demo.py  diagram_demo.py  hybrid_search_demo.py  parser_demo.py  query_expansion_demo.py  result_diversification_demo.py  sample-data.json  sample-diagrams.json  sample-markdown.md  sample-openapi.json  sample-text.txt  session_demo.py
frontend/: .dockerignore  (+11 more)
(+309 files in other folders)
